addin exception log and params